--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "clean-build": "rimraf -rf ./build",
     "compile": "tsc -p .",
-    "copy-templates": "cpy ./src/templates/* ./build/templates",
+    "copy-templates": "cpy 'src/templates/*' build/templates",
     "build": "bun run clean-build && bun run compile && bun run copy-templates",
     "prepublishOnly": "bun run build",
     "format": "biome format --write .",
@@ -28,7 +28,7 @@
   "files": [
     "build",
     "LICENSE",
-    "readme.md",
+    "README.md",
     "docs",
     "bin"
   ],
@@ -39,11 +39,20 @@
   "devDependencies": {
     "@biomejs/biome": "^2.2.0",
     "@types/node": "^24.3.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "cpy-cli": "^6.0.0",
     "lefthook": "^1.12.3",
+    "rimraf": "^6.0.1",
+    "tdd-guard-vitest": "^0.1.3",
     "ts-node": "^10.9.2",
     "typescript": "~5.9.2",
     "vitest": "^3.2.4"
+  },
+  "overrides": {
+    "cross-spawn": "^7.0.5",
+    "semver": "^7.6.3",
+    "axios": "^1.7.9",
+    "ejs": "^3.1.10"
   }
 }
