--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
       - 'v*.*.*'
 
 permissions:
-  contents: write
+  contents: read
 
 jobs:
   # Wait for the CI Pipeline to pass before releasing
@@ -42,6 +42,12 @@ jobs:
   build-and-release:
     name: Build and Release
     runs-on: ubuntu-latest
+    environment:
+      name: production
+      url: https://www.npmjs.com/package/mikrus
+    permissions:
+      contents: write       # For creating releases
+      id-token: write      # For NPM provenance
     needs: [check-ci-status]
     steps:
       - name: Checkout code
@@ -199,6 +205,9 @@ jobs:
   publish-npm:
     name: Publish to NPM
     runs-on: ubuntu-latest
+    environment:
+      name: npm-production
+      url: https://www.npmjs.com/package/mikrus
     needs: [build-and-release, build-and-test]
     if: startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-')
     permissions:
