--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -9,13 +9,16 @@ on:
 
 permissions:
   contents: read
+  security-events: write  # Required for uploading to the GitHub Security tab
 
 jobs:
   dependency-scan:
     name: Dependency Security Scan
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     permissions:
       contents: read
+      security-events: write
     steps:
       - name: Checkout code
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
@@ -28,155 +31,72 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
-      - name: Run dependency audit
-        run: |
-          echo "🔍 Running comprehensive dependency audit..."
-          audit_output=$(bunx bun audit 2>&1 || true)
-          echo "$audit_output"
-          
-          # Count vulnerabilities by severity using structured parsing
-          if command -v jq >/dev/null 2>&1 && echo "$audit_output" | jq empty >/dev/null 2>&1; then
-            # Use JSON parsing if output is valid JSON
-            critical_count=$(echo "$audit_output" | jq -r '[.vulnerabilities // {} | to_entries[] | select(.value.severity == "critical")] | length' 2>/dev/null || echo "0")
-            high_count=$(echo "$audit_output" | jq -r '[.vulnerabilities // {} | to_entries[] | select(.value.severity == "high")] | length' 2>/dev/null || echo "0")
-            moderate_count=$(echo "$audit_output" | jq -r '[.vulnerabilities // {} | to_entries[] | select(.value.severity == "moderate")] | length' 2>/dev/null || echo "0")
-          else
-            # Fallback to grep-based counting for non-JSON output
-            critical_count=$(echo "$audit_output" | grep -c "critical" || echo "0")
-            high_count=$(echo "$audit_output" | grep -c "high" || echo "0") 
-            moderate_count=$(echo "$audit_output" | grep -c "moderate" || echo "0")
-          fi
-          
-          echo "📊 Security Audit Summary:"
-          echo "Critical: $critical_count"
-          echo "High: $high_count"  
-          echo "Moderate: $moderate_count"
-          
-          # Fail on critical or high vulnerabilities
-          if [ "$critical_count" -gt 0 ] || [ "$high_count" -gt 0 ]; then
-            echo "❌ Critical or high severity vulnerabilities found!"
-            echo "Please review and fix security issues before proceeding."
-            exit 1
-          fi
-          
-          echo "✅ No critical or high severity vulnerabilities found."
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@14818c4695ecc4045f33c9cee9e795a788711ca4 # master
+        continue-on-error: false
+        if: env.SNYK_TOKEN != ''
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --sarif-file-output=snyk.sarif
 
-      - name: Check for vulnerable packages
-        run: |
-          echo "🔍 Checking for known vulnerable packages..."
-          # Check for packages with known security issues
-          if bunx better-npm-audit audit --level moderate; then
-            echo "✅ No vulnerable packages detected by better-npm-audit"
-          else
-            echo "⚠️ Potential security issues detected - review carefully"
-            exit 1
-          fi
-        continue-on-error: true
+      - name: Upload Snyk results to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@47b3d888fe66b639e431abf22ebca059152f1eea # v3
+        if: env.SNYK_TOKEN != '' && always()
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          sarif_file: snyk.sarif
+          category: snyk-dependencies
 
-  license-scan:
-    name: License Compliance Scan
+  codeql-analysis:
+    name: CodeQL Security Analysis
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     permissions:
       contents: read
+      security-events: write
+      actions: read
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'javascript' ]
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
 
-      - name: Setup Bun
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@47b3d888fe66b639e431abf22ebca059152f1eea # v3
+        with:
+          languages: ${{ matrix.language }}
+          config-file: ./.github/codeql/codeql-config.yml
+          queries: security-extended,security-and-quality
+
+      - name: Setup Node.js for CodeQL
+        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4
+        with:
+          node-version: 20
+
+      - name: Setup Bun for CodeQL
         uses: oven-sh/setup-bun@f4d14e03ff726c06358e5557344e1da148b56cf7 # v1
         with:
           bun-version: latest
 
-      - name: Install dependencies
+      - name: Install dependencies for analysis
         run: bun install --frozen-lockfile
 
-      - name: Run license scan
-        run: |
-          echo "📜 Checking license compliance..."
-          bunx license-checker --summary
-          
-          # Check for problematic licenses (safer approach)
-          problematic_licenses=$(bunx license-checker --excludePrivatePackages --json 2>/dev/null | jq -r 'to_entries[] | select(.value.licenses | type == "string" and (contains("GPL") or contains("AGPL") or contains("LGPL") or contains("UNLICENSED"))) | .key + ": " + .value.licenses' 2>/dev/null || echo "")
-          
-          if [ -n "$problematic_licenses" ]; then
-            echo "⚠️ Found potentially problematic licenses:"
-            echo "$problematic_licenses"
-            echo "Please review license compatibility for commercial use."
-          else
-            echo "✅ No problematic licenses detected."
-          fi
+      - name: Add node_modules/.bin to PATH
+        run: echo "./node_modules/.bin" >> $GITHUB_PATH
 
-  secrets-scan:
-    name: Secrets and Sensitive Data Scan
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
+      - name: Build for CodeQL analysis
+        run: bun run build
 
-      - name: Run secret scan
-        run: |
-          echo "🔍 Scanning for hardcoded secrets..."
-          
-          # Check for common secret patterns (safer approach)
-          secret_matches=$(grep -r -i --exclude-dir=node_modules --exclude-dir=.git \
-            -E "(password|passwd|pwd|secret|token|key|api_key|apikey|access_key|private_key)" \
-            . 2>/dev/null | grep -v -E "(\.md:|\.yml:|test|example|placeholder|EXAMPLE|TODO)" | head -10 || true)
-          
-          if [ -n "$secret_matches" ]; then
-            echo "⚠️ Potential secrets found - please review above matches"
-            echo "$secret_matches"
-          else
-            echo "✅ No obvious secrets detected in source code"
-          fi
-          
-          # Check for AWS keys, API keys, etc. (safer approach)
-          aws_keys=$(grep -r -i --exclude-dir=node_modules --exclude-dir=.git \
-            -E "(AKIA[0-9A-Z]{16}|sk_live_[0-9a-zA-Z]{24}|sk_test_[0-9a-zA-Z]{24})" . 2>/dev/null || true)
-          
-          if [ -n "$aws_keys" ]; then
-            echo "❌ AWS or Stripe keys detected!"
-            echo "$aws_keys"
-            exit 1
-          fi
-          
-          echo "✅ No AWS/Stripe keys detected"
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@47b3d888fe66b639e431abf22ebca059152f1eea # v3
+        with:
+          category: '/language:${{ matrix.language }}'
+          upload: true
 
-  supply-chain-security:
-    name: Supply Chain Security
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
 
-      - name: Verify package integrity
-        run: |
-          echo "🔍 Verifying package integrity..."
-          
-          # Check for package-lock.json and bun.lock consistency
-          if [ -f "package-lock.json" ] && [ -f "bun.lock" ]; then
-            echo "⚠️ Both package-lock.json and bun.lock found - choose one"
-          fi
-          
-          # Verify no suspicious packages (safer approach)
-          suspicious_packages=("bitcoinjs-lib" "coinhive" "event-stream" "rc" "flatmap-stream")
-          for package in "${suspicious_packages[@]}"; do
-            if grep -q "\"$package\"" package.json 2>/dev/null; then
-              echo "⚠️ Suspicious package detected: $package"
-            fi
-          done
-          
-          echo "✅ Supply chain integrity checks completed"
 
-      - name: Check for typosquatting
-        run: |
-          echo "🔍 Checking for potential typosquatting packages..."
-          
-          # List of legitimate packages to check against
-          common_packages=("express" "lodash" "react" "axios" "typescript" "webpack")
-          
-          # This would typically use a more sophisticated typosquatting detection tool
-          echo "✅ Basic typosquatting check completed"
+
