feat(security): Comprehensive Security Scan
- Add CodeQL configuration for enhanced security analysis
- Integrate Snyk vulnerability scanning workflow
- Configure CodeQL with security-focused query suites
- Add comprehensive path exclusions for analysis
- Include CWE-specific security checks for JavaScript/TypeScript
- Set up SARIF uploads for GitHub Code Scanning
- Integrate Snyk scan into main CI pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -176,6 +176,16 @@ jobs:
     permissions:
       contents: read
 
+  snyk-scan:
+    name: Snyk Scan
+    uses: ./.github/workflows/snyk-scan.yml
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+    secrets:
+      SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
   # Integration test job that runs the built CLI
   integration-test:
     name: Integration Test
@@ -240,7 +250,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-    needs: [lint-and-format, test, build, security-scan, integration-test]
+    needs: [lint-and-format, test, build, snyk-scan, security-scan, integration-test]
     if: always()
     steps:
       - name: Notify on success
