--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "cross-spawn": "^7.0.5",
     "semver": "^7.6.3",
     "axios": "^1.7.9",
-    "ejs": "^3.1.10"
+    "ejs": "^3.1.10",
+    "lodash": "^4.17.21"
   }
 }
