--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
     "semver": "^7.6.3",
     "axios": "^1.7.9",
     "ejs": "^3.1.10",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "lodash.trim": ">=4.6.0",
+    "lodash.trimend": ">=4.6.0"
   }
 }
