--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "axios": "^1.7.9",
     "ejs": "^3.1.10",
     "lodash": "^4.17.21",
-    "lodash.trim": ">=4.6.0",
-    "lodash.trimend": ">=4.6.0"
+    "lodash.trim": "4.5.1",
+    "lodash.trimend": "4.5.1"
   }
 }
