feat(config): add minor improvements for enhanced development experience
TypeScript Configuration Enhancements:
- Enable allowSyntheticDefaultImports for better import compatibility
- Enable esModuleInterop for improved module interoperability
- Maintain node moduleResolution for CommonJS compatibility

Security Enhancement:
- Add security:audit script for JSON report generation
- Add security:check script for quick vulnerability assessment
- Add security:monitor script for CI/CD integration

Code Quality Assessment:
- Audited lodash usage: only native JavaScript trim() used in src/
- Confirmed vulnerabilities are in transitive dependencies (Gluegun)
- No direct lodash imports found in source code

Benefits:
- Better TypeScript module handling and import resolution
- Automated security monitoring capabilities
- Enhanced development workflow with security scripts

--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "security:audit": "bunx bun audit --json > security-report.json",
+    "security:check": "bunx bun audit 2>&1 | grep -E '(critical|high)' || echo 'No critical/high vulnerabilities'",
+    "security:monitor": "bunx bun audit | grep -E '(critical|high)' && exit 1 || echo 'Security check passed'"
   },
   "files": [
     "build",
