--- a/package.json
+++ b/package.json
@@ -83,8 +83,6 @@
     "semver": "^7.6.3",
     "axios": "^1.7.9",
     "ejs": "^3.1.10",
-    "lodash": "^4.17.21",
-    "lodash.trim": "4.5.1",
-    "lodash.trimend": "4.5.1"
+    "lodash": "^4.17.21"
   }
 }
