--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "axios": "^1.7.9",
     "ejs": "^3.1.10",
     "lodash": "^4.17.21",
-    "lodash.trim": ">=4.6.0",
-    "lodash.trimend": ">=4.6.0"
+    "lodash.trim": "npm:lodash@^4.17.21",
+    "lodash.trimend": "npm:lodash@^4.17.21"
   }
 }
