fix(workflows): resolve Deno branch targeting and security issues
- Fix CI workflow to include feature/deno-cliffy-experiment branch
- Upgrade Deno version from v1.x to v2.x in release workflow
- Remove mixed Bun tooling from Deno security workflow
- Replace hardcoded mikr.us API endpoint with environment variable
- Remove version disclosure from User-Agent header
- Update security audit to use Deno-native tools only
- Fix branch targeting in comprehensive-security-audit workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ name: "🦕 Deno CI/CD Pipeline"
 
 on:
   push:
-    branches: [ main-deno ]
+    branches: [ main-deno, feature/deno-cliffy-experiment ]
   pull_request:
     branches: [ main-deno ]
     paths:
